--- a/css/style.css
+++ b/css/style.css
@@ -207,6 +207,14 @@ body {
     margin-top: 90px;
 }
 
+.idc-head__info-item {
+    max-width: 230px;
+}
+
+.idc-head__info-item:last-child {
+    max-width: 280px;
+}
+
 .idc-head__info-item:not(:first-child) {
     margin-left: 40px;
 }
@@ -216,7 +224,7 @@ body {
     width: 100%;
     font-style: normal;
     font-weight: normal;
-    font-size: 24px;
+    font-size: 25px;
     line-height: 29px;
     text-align: center;
     letter-spacing: 0.015em;
@@ -492,16 +500,23 @@ body {
     margin-right: 15px;
 }
 
-.idc-instr__arrow {
+.idc-instr__animate-arrow {
     position: absolute;
     left: 200px;
     bottom: -80px;
 }
 
+.idc-instr__arrow_path_arrow {
+    opacity: 0;
+    position: absolute;
+    bottom: 5px;
+    right: 2px;
+}
+
 .idc-instr__arrow_path {
     stroke-dasharray: 1000;
     stroke-dashoffset: 1000;
-    animation: dash 5s linear alternate infinite;
+    animation: dash 10s linear forwards;
 }
 
 .idc-instr__arrow_path-dashed {
@@ -509,9 +524,6 @@ body {
 }
 
 @keyframes dash {
-    from {
-        stroke-dashoffset: 1000;
-    }
     to {
         stroke-dashoffset: 0;
     }
@@ -832,6 +844,12 @@ body {
     border-radius: 50px;
     cursor: pointer;
     z-index: 10;
+}
+
+.idc-article__swiper-button-prev:hover,
+.idc-article__swiper-button-next:hover {
+    transition: all 0.3s;
+    border: 1px solid rgba(15, 143, 238, 0.6);
 }
 
 .idc-article__swiper-button-prev {
