--- a/css/style.css
+++ b/css/style.css
@@ -507,13 +507,19 @@ body {
 }
 
 .idc-instr__arrow_path_arrow {
-    opacity: 0;
     position: absolute;
     bottom: 5px;
     right: 2px;
 }
 
-.idc-instr__arrow_path {
+
+/* .idc-instr__arrow_path {
+    stroke-dasharray: 1000;
+    stroke-dashoffset: 1000;
+    animation: dash 10s linear forwards;
+} */
+
+.aos-animate svg [data-aos="animate-arrow"] {
     stroke-dasharray: 1000;
     stroke-dashoffset: 1000;
     animation: dash 10s linear forwards;
