--- a/css/style.css
+++ b/css/style.css
@@ -20,25 +20,26 @@ body {
     margin: 0;
     font-family: 'Arial', Helvetica, sans-serif;
     overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0) !important;
 }
 
 
 /* universal classes */
 
 .idc-button {
+    display: inline-block;
+    border: none;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 20px;
-    line-height: 23px;
+    line-height: 28px;
     border: 1px solid transparent;
-    padding: 16px 40px;
-    justify-content: center;
+    padding: 16px 61px 16px;
     border-radius: 5px;
     cursor: pointer;
-    width: 250px;
-    height: 55px;
 }
 
 .idc-flex {
@@ -172,11 +173,17 @@ body {
     margin: 0 100px;
 }
 
+.idc-head .idc-button__wrapper {
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 55px;
+}
+
 .idc-head .idc-button {
     background-color: #fff;
-    color: #0F53FA;
-    margin: 0 auto;
-    margin-top: 55px;
+    color: #CE42FF;
+    text-align: center;
+    display: inline-block;
 }
 
 .idc-head .idc-button:hover {
@@ -374,6 +381,34 @@ body {
     visibility: visible;
     opacity: 1;
     z-index: 5;
+    transition: 0.5s;
+}
+
+.idc-information__img-wrapper {
+    position: relative;
+    width: 16px;
+    height: 16px;
+}
+
+.idc-information__img_hovered,
+.idc-information__img {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+}
+
+.idc-information__img_hovered {
+    opacity: 0;
+}
+
+.idc-information:hover .idc-information__img {
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.idc-information:hover .idc-information__img_hovered {
+    opacity: 1;
+    transition: 0.5s;
 }
 
 
@@ -381,10 +416,47 @@ body {
 
 .idc-analyse__vector {
     position: absolute;
+    opacity: 0;
     top: -4px;
     left: 22px;
     width: 16px;
     height: 18px;
+}
+
+.aos-animate .idc-analyse__vector_1 {
+    transition: 1s all;
+    opacity: 1;
+    transition-delay: 2s;
+}
+
+.aos-animate .idc-analyse__vector_2 {
+    transition: 1s all;
+    opacity: 1;
+    transition-delay: 2.5s;
+}
+
+.aos-animate .idc-analyse__vector_3 {
+    transition: 1s all;
+    opacity: 1;
+    transition-delay: 3s;
+}
+
+.aos-animate .idc-analyse__vector_4 {
+    transition: 1s all;
+    opacity: 1;
+    transition-delay: 3.5s;
+}
+
+.aos-animate .idc-analyse__vector_5 {
+    transition: 1s all;
+    opacity: 1;
+    transition-delay: 4s;
+}
+
+.aos-animate .idc-analyse__vector_6 {
+    transition: 1s all;
+    opacity: 1;
+    transition-delay: 4.5s;
 }
 
 .idc-analyse__list-item .idc-subtitle,
@@ -404,23 +476,19 @@ body {
     line-height: 54px;
 }
 
-.idc-analyse .idc-button {
+.idc-analyse .idc-button__wrapper {
     margin-top: 70px;
-    width: 221px;
-    height: 55px;
-    font-size: 16px;
+}
+
+.idc-analyse .idc-button {
     color: #FFFFFF;
-    background-image: url(../img/icons/button-bg.png);
-    background-repeat: no-repeat;
-    background-size: auto;
-    background-position: center;
-    /* background: linear-gradient(295.71deg, #3A1182 -20.21%, #C531BF 43.34%, #FF8839 98.29%); */
+    background: #0F8FEE;
+    font-size: 20px;
 }
 
 .idc-analyse .idc-button:hover {
-    transition: all 0.5s;
-    background-position: bottom;
-    /* background: linear-gradient(292.32deg, #3A1182 -1.08%, #E128DA 78.7%, #FDA727 127.88%); */
+    transition: all 0.3s;
+    background: #007FDA;
 }
 
 
@@ -506,23 +574,34 @@ body {
     bottom: -80px;
 }
 
-.idc-instr__arrow_path_arrow {
-    position: absolute;
-    bottom: 5px;
-    right: 2px;
+.idc-instr__arrow_start {
+    opacity: 0;
 }
 
-
-/* .idc-instr__arrow_path {
+.aos-animate .idc-instr__arrow_path {
     stroke-dasharray: 1000;
     stroke-dashoffset: 1000;
-    animation: dash 10s linear forwards;
-} */
+    animation: dash 5s linear forwards;
+    animation-delay: 2s;
+}
 
-.aos-animate svg [data-aos="animate-arrow"] {
-    stroke-dasharray: 1000;
-    stroke-dashoffset: 1000;
-    animation: dash 15s linear forwards;
+.aos-animate .idc-instr__arrow_start {
+    opacity: 1;
+    transition: 1s;
+    transition-delay: 2s;
+}
+
+.idc-instr__arrow_end {
+    position: absolute;
+    bottom: 1px;
+    right: 2px;
+    opacity: 0;
+}
+
+.aos-animate .idc-instr__arrow_end {
+    opacity: 1;
+    transition: 0.5s;
+    transition-delay: 3.3s;
 }
 
 .idc-instr__arrow_path-dashed {
@@ -592,10 +671,29 @@ body {
 }
 
 .idc-instr__vector {
+    opacity: 0;
     position: absolute;
     top: -9px;
     left: 53%;
     transform: translateX(-53%);
+}
+
+.aos-animate .idc-vector-one .idc-instr__vector {
+    opacity: 1;
+    transition: 1s;
+    transition-delay: 5s;
+}
+
+.aos-animate .idc-vector-two .idc-instr__vector {
+    opacity: 1;
+    transition: 1s;
+    transition-delay: 5.5s;
+}
+
+.aos-animate .idc-vector-three .idc-instr__vector {
+    opacity: 1;
+    transition: 1s;
+    transition-delay: 6s;
 }
 
 .idc-macbook {
@@ -663,23 +761,21 @@ body {
     align-items: center;
 }
 
-.idc-whyus .idc-button {
+.idc-whyus .idc-button__wrapper {
+    margin: 0 auto;
+    text-align: center;
     margin-top: 60px;
-    width: 250px;
-    height: 55px;
-    font-size: 20px;
+}
+
+.idc-whyus .idc-button {
+    display: inline-block;
     color: #FFFFFF;
-    background-image: url(../img/icons/button-bg.png);
-    background-repeat: no-repeat;
-    background-size: auto;
-    background-position: center;
-    /* background: linear-gradient(295.71deg, #3A1182 -20.21%, #C531BF 43.34%, #FF8839 98.29%); */
+    background: #0F8FEE;
 }
 
 .idc-whyus .idc-button:hover {
-    transition: all 0.5s;
-    background-position: bottom;
-    /* background: linear-gradient(292.32deg, #3A1182 -1.08%, #E128DA 78.7%, #FDA727 127.88%); */
+    transition: all 0.3s;
+    background: #007FDA;
 }
 
 .idc-whyus .idc-title {
@@ -799,6 +895,8 @@ body {
 }
 
 .idc-article__img-wrapper {
+    border-radius: 10px 10px 0px 0px;
+    overflow: hidden;
     height: 187px;
     width: 340px;
 }
@@ -809,7 +907,7 @@ body {
 
 .idc-article__swiper-title {
     margin: 0;
-    margin-top: 20px;
+    padding-top: 20px;
     max-width: 340px;
     width: 100%;
     font-style: normal;
@@ -817,6 +915,16 @@ body {
     font-size: 18px;
     line-height: 21px;
     letter-spacing: 0.015em;
+}
+
+.idc-article__swiper-link {
+    text-decoration: none;
+    color: #000000;
+}
+
+.idc-article__swiper-slide:hover .idc-article__img {
+    transition: 0.5s;
+    transform: scale(1.1);
 }
 
 .idc-article__swiper-pagination.swiper-pagination.swiper-pagination-horizontal {
@@ -926,10 +1034,13 @@ body {
     max-width: 750px;
 }
 
-.idc-prefooter .idc-button {
+.idc-prefooter .idc-button__wrapper {
     margin-top: 80px;
-    color: #0F53FA;
-    background: #ffffff;
+}
+
+.idc-prefooter .idc-button {
+    color: #CE42FF;
+    background: #fff;
 }
 
 .idc-prefooter .idc-button:hover {
@@ -942,3 +1053,26 @@ body {
 .idc-prefooter__img {
     display: block;
 }
+
+
+/* *********************************** */
+
+.idc-footer .idc-bg-wrapper {
+    background: #333333;
+}
+
+.idc-footer {
+    position: relative;
+    width: 100%;
+    height: 836px;
+    text-align: center;
+}
+
+.idc-footer h1 {
+    color: #ffffff;
+    margin: 0;
+    margin-top: 40px;
+}
+
+
+/* ************************************ */
