--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,10 @@ body {
     padding: 0 20px;
 }
 
+.idc-main-wrapper__fixed-el {
+    position: fixed;
+}
+
 .idc-bg-wrapper {
     height: 100%;
     width: 100%;
@@ -967,11 +971,11 @@ body {
 }
 
 .idc-article__swiper-button-prev {
-    left: -85px;
+    left: -80px;
 }
 
 .idc-article__swiper-button-next {
-    right: -85px;
+    right: -80px;
 }
 
 .idc-article__link-block {
@@ -1009,6 +1013,7 @@ body {
 
 .idc-prefooter {
     position: relative;
+    z-index: -1;
 }
 
 .idc-prefooter .idc-container {
@@ -1062,6 +1067,7 @@ body {
 }
 
 .idc-footer {
+    z-index: 15;
     position: relative;
     width: 100%;
     height: 836px;
